@@ -87,14 +87,6 @@ public record HelmetAttachmentDataComponent(boolean down, HelmetAttachmentsME he
 
     @Override
     public void appendTooltip(Item.TooltipContext context, Consumer<Text> textConsumer, TooltipType type, ComponentsAccess components) {
-        if (DyeablePiecesME.dyeableHelmetAttachments.containsKey(this.helmetAttachment())){
-            textConsumer.accept(Text.translatable("tooltip." + MiddleEarth.MOD_ID + "." + this.helmetAttachment().getName())
-                    .append(" (")
-                    .append(Text.translatable("tooltip." + MiddleEarth.MOD_ID + ".color")
-                            .append(": " + String.format("#%06X", (0xFFFFFF & this.helmetAttachmentColor)))
-                            .append(")")).formatted(Formatting.GRAY));
-        } else {
-            textConsumer.accept(Text.translatable("tooltip." + MiddleEarth.MOD_ID + "." + this.helmetAttachment().getName()).formatted(Formatting.GRAY));
-        }
+        textConsumer.accept(Text.translatable("tooltip.%s.%s".formatted(MiddleEarth.MOD_ID, this.helmetAttachment().getName())).formatted(Formatting.GRAY));
     }
 }
